[workspace]
resolver = "2"

members = [
    "contracts/direct-stream",
    "contracts/mocks/mock-token",
    "contracts/test-suites"
]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[workspace.dependencies.soroban-sdk]
version = "20.5.0"

[workspace.dependencies.soroban-fixed-point-math]
version = "1.0.0"

[workspace.dependencies.sep-41-token]
version = "1.0.0"

[workspace.dependencies.soroban-token-sdk]
version = "20.5.0"
